k8s/overlays/development/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gh-deck
spec:
  template:
    spec:
      containers:
      - &main
        name: rails
        image: ${GH_DECK_IMAGE}
        stdin: true
        tty: true
      - <<: *main
        name: console
        command: ['sh', '-c', 'while true; do sleep 1; done']
        ports: []
      - <<: *main
        name: webpack-dev-server
        command: ['bin/webpack-dev-server']
        ports:
        - containerPort: 3001
      - <<: *main
        name: apollo-codegen
        command: ['yarn', 'run', 'apollo:codegen', '--watch']
