k8s/overlays/development/local-volume.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gh-deck
spec:
  template:
    spec:
      containers:
      - &main
        name: rails
        volumeMounts:
        - name: approot
          mountPath: /app
      - <<: *main
        name: console
      - <<: *main
        name: webpack-dev-server
      - <<: *main
        name: relay-compiler
      volumes:
      - name: approot
        hostPath:
          path: ${PWD}
