k8s/overlays/development/pg.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gh-deck-postgres
spec:
  template:
    metadata:
      labels:
        app: gh-deck-postgres
    spec:
      containers:
      - name: gh-deck-postgres
        image: postgres:10.3-alpine
        volumeMounts:
        - name: pg-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: pg-data
        persistentVolumeClaim:
          claimName: pv0001
---
apiVersion: v1
kind: Service
metadata:
  name: gh-deck-postgres
spec:
  type: ClusterIP
  ports:
  - port: 5432
    protocol: TCP
  selector:
    app: gh-deck-postgres
