k8s/overlays/development/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gh-deck
spec:
  ports:
  - port: 81
    targetPort: 3001
    protocol: TCP
    name: webpack-dev-server
